skywalking/k8s/test-sky.yaml
apiVersion: v1
kind: Pod
metadata:
  name: agent-as-sidecar
  namespace: stag
spec:
  restartPolicy: Never

  volumes:
    - name: skywalking-agent
      emptyDir: { }

  containers:
    - name: app-container
      image: springio/gs-spring-boot-docker
      volumeMounts:
        - name: skywalking-agent
          mountPath: /skywalking
