skywalking/k8s/skywalking_v9.6.yaml
apiVersion: v1
kind: Service
metadata:
  name: skywalking-9-svc
  namespace: prod
  labels:
    app: skywalking-9-svc
spec:
  type: ClusterIP
  ports:
    - port: 11800
      name: skywalking-collect
      targetPort: 11800
    - port: 12800
      name: skywalking-ui
      targetPort: 12800
    - name: ui-http
      port: 8080
      targetPort: 8080
  selector:
    name: skywalking-9
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: skywalking-9
  labels:
    name: skywalking-9
    component: ops
    role: ops
  namespace: prod
spec:
  selector:
    matchLabels:
      name: skywalking-9
  template:
    metadata:
      labels:
        name: skywalking-9
    spec:
      hostname: skywalking-9
      containers:
      - name: skywalking-oap-9
        image: apache/skywalking-oap-server:9.6.0
        imagePullPolicy: IfNotPresent
        command: ['/bin/sh','-c']
        args:
        - cp /skywalking/ext-libs/* /skywalking/oap-libs/ && exec bash docker-entrypoint.sh
        ports:
        - containerPort: 
          protocol: TCP
          containerPort: 11800
        - containerPort: 
          protocol: TCP
          containerPort: 12800
        volumeMounts:
        - name: libs
          mountPath: /skywalking/ext-libs

      - name: skywalking-ui-9
        image: apache/skywalking-ui:9.6.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort:
          protocol: TCP
          containerPort: 8080

      tolerations:
      - operator: Exists
      volumes:
      - hostPath:
          path: /opt/store/skywalking/ext-libs
          type: Directory
        name: libs

      nodeSelector:
        kubernetes.io/hostname: prod-slave00
---
# ------------------- App Ingress ------------------- #
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skywalking-9-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: skywalking9-prod.xxxx.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: skywalking-9-svc
            port:
              number: 8080
